--- a/webapp2/webapp2/wsgi.ini
+++ b/webapp2/webapp2/wsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 socket=0.0.0.0:9090
-chdir=/usr/src/app
+chdir=/usr/src/app/webapp2
 module=webapp2.wsgi:application
 master=True
 vacuum=True
